# 524_group_7

./: CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pyeasyeda/: birds_eye_view.py  close_up.py  pyeasyeda.py  summary_suggestions.py
tests/: test_birds_eye_view.py  test_clean_up.py  test_close_up.py  test_pyeasyeda.py  test_summary_suggestions.py
tests/data/: penguins_test.csv
