[tool.poetry]
name = "pyeasyeda"
version = "0.1.0"
description = "Make exploratory data analysis easier! "
authors = ["Luming Yang"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"
numpy = "^1.22.1"
seaborn = "^0.11.2"
matplotlib = "^3.5.1"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
codecov = "^2.1.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
